--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>微信公众号格式化编辑器</title>
-  <link rel="shortcut icon" href="favicon.png"> 
+  <title>公众号Markdown编辑器</title>
+  <link rel="shortcut icon" href="favicon.png">
   <link rel="apple-touch-icon-precomposed" href="favicon.png">
   <link rel="stylesheet" href="assets/css/vue-eleui.css">
   <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
@@ -50,7 +50,7 @@
               </el-option>
             </el-select>
           </el-form-item>
-          <el-form-item label="Themes">
+          <el-form-item label="编译样式">
             <el-select v-model="currentTheme" size="mini" placeholder="选择主题样式" @change="themeChanged">
               <el-option v-for="theme in themeOption" :key="theme.value" :label="theme.label" :value="theme.value">
                 <span style="float: left">{{ theme.label }}</span>
@@ -59,11 +59,12 @@
             </el-select>
           </el-form-item>
         </el-form>
+        <el-button class="copy-button" @click="copy">复制内容到公众号</el-button>
         <el-button class="about" @click="aboutDialogVisible = true">关于</el-button>
       </el-header>
       <el-main class="main-body">
         <el-row :gutter="10" class="main-section">
-          <el-col :span="12">
+          <el-col :span="16">
             <textarea
               id="editor"
               type="textarea"
@@ -71,9 +72,8 @@
               v-model="source">
             </textarea>
           </el-col>
-          <el-col :span="12" class="preview-wrapper">
+          <el-col :span="8" class="preview-wrapper">
             <section>
-              <div class="hint">全选复制或<a href="#" @click="copy" class="copy-button">点此复制</a>，然后在公众号编辑器粘贴</div>
               <div class="preview" contenteditable="true">
                 <div id="output" v-html="output">
                 </div>
@@ -86,22 +86,17 @@
 
     <el-dialog title="关于" :visible.sync="aboutDialogVisible" width="30%" center>
       <div>
-        <h3>WeChat Format 有什么用？</h3>
-        <p>能较好地排版；</p>
-        <p>能解决 <code>ul</code> 和 <code>ol</code> 渲染时样式被微信编辑器重置的问题；</p>
-        <p>能把外部链接自动转为参考文献索引，并且附在文章末尾</p>
+        <p><b>黄文清</b>，码农出身IT老兵，创业者，<a href='https://www.senscrm.com' target='_blank' class='url'>晓售CRM</a>创始人。</p>
         <p>&nbsp;</p>
-        <h3>关于我</h3>
+        <p>开始练习写作，把一些工作心得放到公众号上。苦于公众号编辑器排班困扰，于是找到了这个wechat-format开源项目并根据我的需求定制化。</p>
+        <p>&nbsp;</p>
+        <p>扫描关注我的个人公众号，或者加我微信：kevinhwq。</p>
+        <p><img src="./assets/images/mp_qrcode.jpg" style="width: 60%; display: block; margin: 0 auto;"/></p>
+        <p>&nbsp;</p>
+        <h3>关于开源项目作者</h3>
         <p>我是 Lyric。如果你喜欢我的工具，可以：</p>
         <p>关注我的公众号 "<code>iamlyricw</code>"，<a href='https://lyric.im' target='_blank' class='url'>博客</a> 或 <a href='https://github.com/lyricat/wechat-format' target='_blank' class='url'>Github</a></p>
-        <p>
-          微信打赏我：
-          <img src="./assets/images/wechat_qrcode.jpg" style="width: 60%; display: block; margin: 0 auto;"/>
-        </p>
       </div>
-      <span slot="footer" class="dialog-footer">
-        <el-button type="primary" @click="aboutDialogVisible = false">打赏了！</el-button>
-      </span>
     </el-dialog>
   </div>
 
@@ -110,15 +105,15 @@
   <script src="assets/scripts/vue.js"></script>
   <script src="assets/scripts/vue-eleui.js"></script>
   <script src="assets/scripts/FuriganaMD.js"></script>
-  
+
   <script src="codemirror/codemirror.js"></script>
   <script src="codemirror/mode/markdown/markdown.js"></script>
 
   <script src="assets/scripts/themes/default.js"></script>
-  <script src="assets/scripts/themes/lupeng.js"></script>
+  <script src="assets/scripts/themes/hwq.js"></script>
   <script src="assets/scripts/renderers/wx-renderer.js"></script>
   <script src="assets/scripts/editor.js"></script>
-  
+
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-4178606-10"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
