--- a/src/index.html
+++ b/src/index.html
@@ -1,126 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>公众号Markdown编辑器</title>
-  <link rel="shortcut icon" href="favicon.png">
-  <link rel="apple-touch-icon-precomposed" href="favicon.png">
-  <link rel="stylesheet" href="assets/css/vue-eleui.css">
-  <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
-  <link rel="stylesheet" href="codemirror/codemirror.css">
-  <link rel="stylesheet" href="codemirror/theme/base16-light.css">
-  <link rel="stylesheet" href="codemirror/theme/duotone-light.css">
-  <link rel="stylesheet" href="codemirror/theme/monokai.css">
-  <link rel="stylesheet" href="assets/css/app.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>公众号Markdown编辑器</title>
+    <link rel="shortcut icon" href="favicon.png">
+    <link rel="apple-touch-icon-precomposed" href="favicon.png">
+    <link rel="stylesheet" href="assets/css/vue-eleui.css">
+    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+    <link rel="stylesheet" href="codemirror/codemirror.css">
+    <link rel="stylesheet" href="codemirror/theme/base16-light.css">
+    <link rel="stylesheet" href="codemirror/theme/duotone-light.css">
+    <link rel="stylesheet" href="codemirror/theme/monokai.css">
+    <link rel="stylesheet" href="assets/css/app.css">
 </head>
 <body>
-  <div id="app" class="container">
+<div id="app" class="container">
     <el-container>
-      <el-header class="top">
-        <div class="logo">{{ title }}</div>
-        <el-form size="mini" class="ctrl" :inline=true>
-          <el-form-item label="Editor Themes">
-            <el-select v-model="currentEditorTheme" size="mini" placeholder="选择字体" @change="editorThemeChanged">
-              <el-option v-for="editorTheme in editorThemes" :key="editorTheme.value" :label="editorTheme.label"
-                :value="editorTheme.value">
-              </el-option>
+        <el-header class="top">
+            <div class="logo">{{ title }}</div>
+            <el-form size="mini" class="ctrl" :inline=true>
+                <el-form-item label="Editor Themes">
+                    <el-select v-model="currentEditorTheme" size="mini" placeholder="选择字体" @change="editorThemeChanged">
+                        <el-option v-for="editorTheme in editorThemes" :key="editorTheme.value"
+                                   :label="editorTheme.label"
+                                   :value="editorTheme.value">
+                        </el-option>
+                    </el-select>
+                </el-form-item>
+                <el-form-item label="Fonts">
+                    <el-select v-model="currentFont" size="mini" placeholder="选择字体" @change="fontChanged">
+                        <el-option v-for="font in builtinFonts" :style="{fontFamily: font.value}"
+                                   :key="font.value"
+                                   :label="font.label"
+                                   :value="font.value">
+                            <span style="float: left">{{ font.label }}</span>
+                            <span style="float: right; color: #8492a6; font-size: 13px">Abc</span>
+                        </el-option>
+                    </el-select>
+                </el-form-item>
+                <el-form-item label="Font Size">
+                    <el-select v-model="currentSize" size="mini" placeholder="选择段落字体大小" @change="sizeChanged">
+                        <el-option v-for="size in sizeOption"
+                                   :key="size.value"
+                                   :label="size.label"
+                                   :value="size.value">
+                            <span style="float: left">{{ size.label }}</span>
+                            <span style="float: right; color: #8492a6; font-size: 13px">{{ size.desc }}</span>
+                        </el-option>
+                    </el-select>
+                </el-form-item>
+                <el-form-item label="编译样式">
+                    <el-select v-model="currentTheme" size="mini" placeholder="选择主题样式" @change="themeChanged">
+                        <el-option v-for="theme in themeOption" :key="theme.value" :label="theme.label"
+                                   :value="theme.value">
+                            <span style="float: left">{{ theme.label }}</span>
+                            <span style="float: right; color: #8492a6; font-size: 13px">{{ theme.author }}</span>
+                        </el-option>
+                    </el-select>
+                </el-form-item>
+            </el-form>
+
+            <el-select v-model="showHtmlSource" size="mini" style="margin-right: 10px;">
+                <el-option label="Preview" :value="false"></el-option>
+                <el-option label="HTML Source" :value="true"></el-option>
             </el-select>
-          </el-form-item>
-          <el-form-item label="Fonts">
-            <el-select v-model="currentFont" size="mini" placeholder="选择字体" @change="fontChanged">
-              <el-option v-for="font in builtinFonts"  :style="{fontFamily: font.value}"
-                :key="font.value"
-                :label="font.label"
-                :value="font.value">
-                <span style="float: left">{{ font.label }}</span>
-                <span style="float: right; color: #8492a6; font-size: 13px" >Abc</span>
-              </el-option>
-            </el-select>
-          </el-form-item>
-          <el-form-item label="Font Size">
-            <el-select v-model="currentSize" size="mini" placeholder="选择段落字体大小" @change="sizeChanged">
-              <el-option v-for="size in sizeOption"
-                :key="size.value"
-                :label="size.label"
-                :value="size.value">
-                <span style="float: left">{{ size.label }}</span>
-                <span style="float: right; color: #8492a6; font-size: 13px" >{{ size.desc }}</span>
-              </el-option>
-            </el-select>
-          </el-form-item>
-          <el-form-item label="编译样式">
-            <el-select v-model="currentTheme" size="mini" placeholder="选择主题样式" @change="themeChanged">
-              <el-option v-for="theme in themeOption" :key="theme.value" :label="theme.label" :value="theme.value">
-                <span style="float: left">{{ theme.label }}</span>
-                <span style="float: right; color: #8492a6; font-size: 13px">{{ theme.author }}</span>
-              </el-option>
-            </el-select>
-          </el-form-item>
-        </el-form>
-        <el-button class="copy-button" @click="copy">复制内容到公众号</el-button>
-        <el-button class="copy-button" @click="save">暂存</el-button>
-        <el-button class="about" @click="aboutDialogVisible = true">关于</el-button>
-      </el-header>
-      <el-main class="main-body">
-        <el-row :gutter="10" class="main-section">
-          <el-col :span="16">
+
+            <el-button class="copy-button" @click="resetTemplate" size="mini">重置模板</el-button>
+            <el-button class="copy-button" @click="copy" size="mini">复制内容到公众号</el-button>
+            <el-button class="copy-button" @click="save" size="mini">暂存</el-button>
+            <el-button class="about" size="mini" @click="aboutDialogVisible = true">关于</el-button>
+        </el-header>
+        <el-main class="main-body">
+            <el-row :gutter="10" class="main-section">
+                <el-col :span="16">
             <textarea
-              id="editor"
-              type="textarea"
-              placeholder="Your markdown here."
-              v-model="source">
+                    id="editor"
+                    type="textarea"
+                    placeholder="Your markdown here."
+                    v-model="source">
             </textarea>
-          </el-col>
-          <el-col :span="8" class="preview-wrapper">
-            <section>
-              <div class="preview" contenteditable="true">
-                <div id="output" v-html="output">
-                </div>
-              </div>
-            </section>
-          </el-col>
-        </el-row>
-      </el-main>
+                </el-col>
+                <el-col :span="8" class="preview-wrapper">
+                    <section style="padding: 20px;">
+                        <div class="code-preview" v-if="showHtmlSource">
+                            <textarea id="code" v-model="output" readonly></textarea>
+                        </div>
+                        <div v-else class="preview" contenteditable="true">
+                            <div id="output" v-html="output"></div>
+                        </div>
+                    </section>
+                </el-col>
+            </el-row>
+        </el-main>
     </el-container>
 
     <el-dialog title="关于" :visible.sync="aboutDialogVisible" width="30%" center>
-      <div>
-        <p><b>黄文清</b>，码农出身IT老兵，创业者，<a href='https://www.senscrm.com' target='_blank' class='url'>晓售CRM</a>创始人。</p>
-        <p>&nbsp;</p>
-        <p>开始练习写作，把一些工作心得放到公众号上。苦于公众号编辑器排班困扰，于是找到了这个wechat-format开源项目并根据我的需求定制化。</p>
-        <p>&nbsp;</p>
-        <p>扫描关注我的个人公众号，或者加我微信：kevinhwq。</p>
-        <p><img src="./assets/images/mp_qrcode.jpg" style="width: 60%; display: block; margin: 0 auto;"/></p>
-        <p>&nbsp;</p>
-        <h3>关于开源项目作者</h3>
-        <p>我是 Lyric。如果你喜欢我的工具，可以：</p>
-        <p>关注我的公众号 "<code>iamlyricw</code>"，<a href='https://lyric.im' target='_blank' class='url'>博客</a> 或 <a href='https://github.com/lyricat/wechat-format' target='_blank' class='url'>Github</a></p>
-      </div>
+        <div>
+            <p><b>黄文清</b>，码农出身IT老兵，创业者，<a href='https://www.senscrm.com' target='_blank' class='url'>晓售CRM</a>创始人。</p>
+            <p>&nbsp;</p>
+            <p>开始练习写作，把一些工作心得放到公众号上。苦于公众号编辑器排班困扰，于是找到了这个wechat-format开源项目并根据我的需求定制化。</p>
+            <p>&nbsp;</p>
+            <p>扫描关注我的个人公众号，或者加我微信：kevinhwq。</p>
+            <p><img src="./assets/images/mp_qrcode.jpg" style="width: 60%; display: block; margin: 0 auto;"/></p>
+            <p>&nbsp;</p>
+            <h3>关于开源项目作者</h3>
+            <p>我是 Lyric。如果你喜欢我的工具，可以：</p>
+            <p>关注我的公众号 "<code>iamlyricw</code>"，<a href='https://lyric.im' target='_blank' class='url'>博客</a> 或 <a
+                    href='https://github.com/lyricat/wechat-format' target='_blank' class='url'>Github</a></p>
+        </div>
     </el-dialog>
-  </div>
+</div>
 
-  <script src="assets/scripts/axios.min.js"></script>
-  <script src="assets/scripts/marked.min.js"></script>
-  <script src="assets/scripts/vue.js"></script>
-  <script src="assets/scripts/vue-eleui.js"></script>
-  <script src="assets/scripts/FuriganaMD.js"></script>
+<script src="assets/scripts/axios.min.js"></script>
+<script src="assets/scripts/marked.min.js"></script>
+<script src="assets/scripts/vue.js"></script>
+<script src="assets/scripts/vue-eleui.js"></script>
+<script src="assets/scripts/FuriganaMD.js"></script>
 
-  <script src="codemirror/codemirror.js"></script>
-  <script src="codemirror/mode/markdown/markdown.js"></script>
+<script src="codemirror/codemirror.js"></script>
+<script src="codemirror/mode/markdown/markdown.js"></script>
 
-  <script src="assets/scripts/themes/default.js"></script>
-  <script src="assets/scripts/themes/hwq.js"></script>
-  <script src="assets/scripts/renderers/wx-renderer.js"></script>
-  <script src="assets/scripts/editor.js"></script>
+<script src="assets/scripts/themes/default.js"></script>
+<script src="assets/scripts/themes/hwq.js"></script>
+<script src="assets/scripts/renderers/wx-renderer.js"></script>
+<script src="assets/scripts/editor.js"></script>
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-4178606-10"></script>
-  <script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-4178606-10"></script>
+<script>
     window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
+
+    function leaveAlert() {
+        return "";
+    }
+
     gtag('js', new Date());
     gtag('config', 'UA-4178606-10');
-  </script>
+</script>
 </body>
 </html>
